<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".OptionsFrament">


    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/backgroundcolor"
        android:text="@string/save"
        android:textColor="?attr/textcolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="?attr/cardbackgroundcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save"
        app:layout_constraintVertical_bias="0.00999999"
        tools:layout_conversion_wrapHeight="0"
        tools:layout_conversion_wrapWidth="1080">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <TextView
                android:id="@+id/text_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Connection"
                android:textColor="?attr/textcolor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_userkey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/UserKey"
                android:textColor="?attr/textcolor" />

            <EditText
                android:id="@+id/editText_userkey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:ems="10"
                android:hint="@string/UserKey"
                android:inputType="textPersonName"
                android:textColor="?attr/textcolor"/>

            <TextView
                android:id="@+id/text_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ipaddress"
                android:textColor="?attr/textcolor" />

            <EditText
                android:id="@+id/editText_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:ems="10"
                android:hint="@string/ipaddress"
                android:inputType="textPersonName"
                android:textColor="?attr/textcolor"/>

            <TextView
                android:id="@+id/text_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/port"
                android:textColor="?attr/textcolor" />

            <EditText
                android:id="@+id/editText_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/port"
                android:inputType="textPersonName"
                android:textColor="?attr/textcolor"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_ui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="?attr/cardbackgroundcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <TextView
                android:id="@+id/text_ui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinterface"
                android:textColor="?attr/textcolor"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_darkmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/darkmode"
                android:textColor="?attr/textcolor" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>